--- a/CyberFicha/styles/css/index.css
+++ b/CyberFicha/styles/css/index.css
@@ -1,7 +1,3 @@
-.footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: #f0f0f0;
-    text-align: center;
+.titulo {
+    margin-left: 10px;
 }
