Desenvolvimento de telas

--- a/CyberFicha/styles/css/index.css
+++ b/CyberFicha/styles/css/index.css
@@ -1,3 +1,12 @@
 .titulo {
     margin-left: 10px;
 }
+
+.criarCampanhaInput, .criarContaInput {
+    max-width: 50%;
+}
+
+.criarCampanhasForm, .formCriarConta {
+    margin-top: 2em;
+    margin-right: 5em;
+}
